# PulseFlow

./: .gitignore  AllRunsteps.md  LICENSE  README.md  app.py  architecture.md  data_loader.py  docker-compose.yml  execution_steps.md  hf_requirements.txt  push_to_hf.py  pyproject.toml  pytest.ini  requirements.txt  setup_steps.txt
.github/workflows/: ci_cd_pipeline.yml  publish.yml
.ve/: pyvenv.cfg
.ve/Scripts/: activate  activate.bat
.ven/: pyvenv.cfg
.ven/Scripts/: activate  activate.bat
airflow/: DockerFile  airflow.cfg
airflow/dags/: mlops_workflow_dag.py
ci_cd/: README.md
ci_cd/tests/: test_app.py  test_etl.py
deployment/: Dockerfile
deployment/app/: main.py  model_loader.py
etl/: data_ingestion.py  data_preprocessing.py
etl/data/: intermediate.parquet  processed.parquet  sample.csv
mlartifacts/415851608216933860/1dfba50f0c494d9290be75874aa8aab5/artifacts/model/: MLmodel  conda.yaml  model.pkl  requirements.txt
mlflow/: README.md  mlflow_config.env  mlflow_setup.py
models/: README.md  generate_model.py
models/models/: saved_model.pkl
training/: evaluate_model.py  train_model.py
