[build-system]
requires = ["setuptools==73", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulseflow-mlops"
version = "0.1.0"
description = "Production-grade open source MLOps pipeline for enterprise data engineering and predictive modeling"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Anil Prasad", email = "anil@ambharii.com"}]
keywords = ["mlops", "machine-learning", "fastapi", "airflow", "mlflow", "etl"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/anilatambharii/PulseFlow"
Documentation = "https://github.com/anilatambharii/PulseFlow/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["etl*", "training*", "deployment*", "models*", "airflow*"]